--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="utf-8">
     <title>Node chat app</title>
+    <socket.io/socket.io.js
 <head>
 <body>
     <h1>Welcome to the chat app!</h1>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+	var socket = io();	// initiate the request
+	socket.on('connect', () => {
+	    console.log ('Connected to the server');
+	});
+	socket.on('disconnect', () => {
+	    console.log ('Disconnected from the server');
+	});
+    </script>
 </body>
 
 </html>
