--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,7 @@
     <h1>Welcome to the chat app!</h1>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-	var socket = io();	// initiate the request
-	socket.on('connect', () => {
-	    console.log ('Connected to the server');
-	});
-	socket.on('disconnect', () => {
-	    console.log ('Disconnected from the server');
-	});
-    </script>
+    <script src='js/index.js'></script>
 </body>
 
 </html>
