--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title>Node chat app</title>
-    <socket.io/socket.io.js
+    <script src='./js/libs/jquery-3.3.1.min.js'></script>
 <head>
 <body>
     <h1>Welcome to the chat app!</h1>
 
+    <ol id="messages">
+
+    </ol>
+    <form id="messageForm">
+	<input name="message" 
+	    type="text" placeholder="Message" />
+	<button>Send</button>
+    </form>
+
+
     <script src="/socket.io/socket.io.js"></script>
     <script src='js/index.js'></script>
+
+    
 </body>
 
 </html>
