--- a/public/chat.html
+++ b/public/chat.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <title>Chat | ChatApp</title>
-    <script src='./js/libs/jquery-3.3.1.min.js'></script>
     <script src='./js/libs/moment.js'></script>
     <script src='./js/libs/mustache.js'></script>
     <link rel='stylesheet' href='./css/styles.css'>
@@ -55,7 +55,9 @@
     </script>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src='js/chat.js'></script>
+    <script src='./js/libs/jquery-3.3.1.min.js'></script>
+    <script src='./js/libs/deparam.js'></script>
+    <script src='./js/chat.js'></script>
     
 </body>
 
