--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <title>Join | ChatApp</title>
     <script src='./js/libs/jquery-3.3.1.min.js'></script>
-    <script src='./js/libs/moment.js'></script>
-    <script src='./js/libs/mustache.js'></script>
     <link rel='stylesheet' href='./css/styles.css'>
 </head>
 
